--- a/Timesheet_App_Bachelor_Thesis/Shared/Timesheet_App_Bachelor_Thesis.Shared.csproj
+++ b/Timesheet_App_Bachelor_Thesis/Shared/Timesheet_App_Bachelor_Thesis.Shared.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
