--- a/Timesheet_App_Bachelor_Thesis/Server/appsettings.json
+++ b/Timesheet_App_Bachelor_Thesis/Server/appsettings.json
@@ -1,27 +1,11 @@
-//{
-//  "Logging": {
-//      "LogLevel": {
-//      "Default": "Information",
-//      "Microsoft": "Warning",
-//      "Microsoft.Hosting.Lifetime": "Information"
-//      }
-//    },
-//"AllowedHosts": "*"
-//}
 {
   "Logging": {
-    "LogLevel": {
+      "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "MySettings": {
-    "BaseUrl": "http://localhost:5000"
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SqlDbContext": "Server=PREDATOR_PH315-\\SQLEXPRESS;Database=TimeSheetAttedenceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+      }
+    },
+"AllowedHosts": "*"
 }
 
